syntax = "proto3";

package signup.email;
option java_multiple_files = true;
option java_package = "signup.email";
message SignupEmailRequest {
  string to = 1;
  string patientId = 2;
  string name = 3;
  string map = 4;
}
message SignupEmailResponse {
  string status = 1;
  string message = 2;
}
service SignupEmailService {
  rpc SendSignupEmail (SignupEmailRequest) returns (SignupEmailResponse);
}
